# sdrangel

devices/: CMakeLists.txt
devices/zcuadrv9009/: CMakeLists.txt  devicezcuadrv9009.cpp  devicezcuadrv9009.h  devicezcuadrv9009box.cpp  devicezcuadrv9009box.h  devicezcuadrv9009params.cpp  devicezcuadrv9009params.h  devicezcuadrv9009scan.cpp  devicezcuadrv9009scan.h  devicezcuadrv9009shared.cpp  devicezcuadrv9009shared.h
plugins/channelrx/remotetcpsink/: remotetcpprotocol.h  remotetcpsinksink.cpp
plugins/samplesource/: CMakeLists.txt
plugins/samplesource/remotetcpinput/: remotetcpinputgui.cpp  remotetcpinputgui.h
plugins/samplesource/zcuadrv9009input/: CMakeLists.txt  zcuadrv9009input.cpp  zcuadrv9009input.h  zcuadrv9009inputgui.cpp  zcuadrv9009inputgui.h  zcuadrv9009inputgui.ui  zcuadrv9009inputplugin.cpp  zcuadrv9009inputplugin.h  zcuadrv9009inputsettings.cpp  zcuadrv9009inputsettings.h  zcuadrv9009inputthread.cpp  zcuadrv9009inputthread.h  zcuadrv9009inputwebapiadapter.cpp  zcuadrv9009inputwebapiadapter.h
sdrbase/resources/: webapi.qrc
sdrbase/resources/webapi/doc/swagger/include/: DeviceReports.yaml  Zcuadrv9009.yaml
swagger/docker/codegen/: swagger-codegen2
swagger/sdrangel/api/swagger/include/: DeviceReports.yaml  DeviceSettings.yaml
swagger/sdrangel/code/html2/: index.html
swagger/sdrangel/code/qt5/client/: SWGDeviceReport.cpp  SWGDeviceReport.h  SWGDeviceSettings.cpp  SWGDeviceSettings.h  SWGZcuadrv9009InputReport.cpp  SWGZcuadrv9009InputReport.h  SWGZcuadrv9009InputSettings.cpp  SWGZcuadrv9009InputSettings.h
